# tickle-pd-linux

./: .clang-format  .gitignore  .gitmodules  README.md  melmak.py  meson.build  meson_options.txt
dada/: testickle.pd
data/: testickle.pd  tickle~-help.pd
scripts/: copy-helpfile.py  plot.sh
src/: client.c++  client.h++  device.c++  device.h++  gitversion.h  gitversion.h.in  isoc_frame.h  shared_device_manager.c++  shared_device_manager.h++  tickle.cc  tickle.h++  tickle_protocol.h
subprojects/: fmt.wrap  tickle-pd-helpfile.wrap
